--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/zerowaste
+MONGO_URI=mongodb+srv://231fa04013_db_user:Pranathi20@cluster0.ysuy6vv.mongodb.net/zerowaste?retryWrites=true&w=majority
 JWT_SECRET=mysecretkey
