--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "cd backend && npm start",
+    "server": "cd backend && npm start && npm run build",
     "client": "cd frontend && npm start",
     "build": "cd frontend && npm install && npm run build",
     "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\""
